--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -35,5 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://huzaifa898.github.io/fyp"
+  "homepage": "https://huzaifa898.github.io/fyp",
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
+  }
 }
