--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://huzaifa898.github.io/fyp",
+  "homepage": "https://huzaifa898.github.io",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.4"
